[package]
name = "runar_common"
version = "0.1.0"
edition = "2021"
authors = ["Runar Team"]
description = "Common traits and utilities for the Runar P2P stack"

[features]
default = []
abstract_service = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.13"
serde_bytes = "0.11"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["sync"] } 